--- a/server/credits.yml
+++ b/server/credits.yml
@@ -5,7 +5,7 @@
   content:
   - role: Développement
     name: Justin Berli
-  - role: Sous la direction de
+  - role: Direction
     name: Guillaume Touya
   - role: L'équipe du projet
     name: Paul Bourcier<br>Bérénice Le Mao<br>Yiyan Li<br>Laura Wenclik
@@ -14,24 +14,33 @@
 ####################
 #### CHARACTERS ####
 ####################
-- title: avec (par ordre d'apparition)
+- title: avec
+  subtitle: par ordre d'apparition
   content:
     - role: Lapinou et ses amis
-      name: 'Stephen "Redshrike" Challener<br>https://opengameart.org/content/bunny-rabbit-lpc-style-for-pixelfarm'
+      name: Stephen "Redshrike" Challener
+      link: 'https://opengameart.org/content/bunny-rabbit-lpc-style-for-pixelfarm'
     - role: Paloma, le pigeon ramier
-      name: 'bluecarrot16<br>https://opengameart.org/content/lpc-birds<br>modifié par Justin Berli'
-    - role: Pépinette, le serpent
-      name: 'basxto et yolkati<br>https://opengameart.org/content/isometric-snakes'
+      name: bluecarrot16
+      link: 'https://opengameart.org/content/lpc-birds'
+    - role: Pip, le serpent
+      name: basxto et yolkati
+      link: 'https://opengameart.org/content/isometric-snakes'
     - role: Zéphyr, l'aigle
-      name: 'bluecarrot16<br>https://opengameart.org/content/lpc-birds'
+      name: bluecarrot16
+      link: 'https://opengameart.org/content/lpc-birds'
     - role: Jean-Claude, le chasseur...
-      name: 'généré avec l''Universal LPC Spritesheet Generator<br>https://liberatedpixelcup.github.io/Universal-LPC-Spritesheet-Character-Generator'
-    - role: '...et son feu de bois'
-      name: 'Zabin et Jetrel<br>https://opengameart.org/content/camp-fire-animation-for-rpgs-finished'
+      name: Universal LPC Spritesheet Generator
+      link: 'https://liberatedpixelcup.github.io/Universal-LPC-Spritesheet-Character-Generator'
+    - role: ...et son feu de bois
+      name: Zabin et Jetrel
+      link: 'https://opengameart.org/content/camp-fire-animation-for-rpgs-finished'
     - role: Marguerite, la fleur
-      name: 'Lanea Zimmerman "Sharm" et madmarcel<br>https://opengameart.org/content/lpc-flower-grow-cycle'
+      name: Lanea Zimmerman "Sharm" et madmarcel
+      link: https://opengameart.org/content/lpc-flower-grow-cycle
     - role: Choupine, le chat
-      name: 'bluecarrot16<br>https://opengameart.org/content/lpc-cats-and-dogs'
+      name: bluecarrot16
+      link: 'https://opengameart.org/content/lpc-cats-and-dogs'
 ###############
 #### AUDIO ####
 ###############
@@ -40,13 +49,16 @@
   - role: Musique originale
     name: Justin Berli
   - role: Effets sonores
-    name: StarNinjas<br>https://opengameart.org/content/7-eating-crunches
+    name: StarNinjas
+    link: https://opengameart.org/content/7-eating-crunches
 ###############
 #### FONTS ####
 ###############
 - title: Polices
   content:
   - role: Vincendo
-    name: GGBotNet<br>https://ggbot.itch.io/vincendo-font
+    name: GGBotNet
+    link: https://ggbot.itch.io/vincendo-font
   - role: Cabin
-    name: Pablo Impallari<br>https://www.dafont.com/fr/cabin.font
+    name: Pablo Impallari
+    link: https://www.dafont.com/fr/cabin.font
