fixed final level update

--- a/server/levels.yml
+++ b/server/levels.yml
@@ -606,7 +606,6 @@
     - 1
     - 0
     - 3
-
 ##################
 #### NIVEAU 4 ####
 ##################
@@ -615,5 +614,49 @@
   content:
     - target: [1.2866479982915493,43.885279168322626]
     - target: [6.089149305028605,45.91959117838756]
-    - target: [1.361450712000182,45.950810067261486]
-    - target: [-1.5260220720508781,49.5499857870286]
+    - player:
+        - -1.9448627257237376
+        - 49.6767516964388
+      target:
+        - -1.9186559757548878
+        - 49.67595688769282
+      hints:
+        '0': parlà.
+      enemies:
+        - type: snake
+          coordinates:
+            - -1.9227414059023715
+            - 49.66807066458003
+        - type: snake
+          coordinates:
+            - -1.9337546488562793
+            - 49.67699264216978
+      helpers:
+        - - -1.9250533163294392
+          - 49.67647554375026
+    - player:
+        - -1.0841512228447812
+        - 45.49483387246127
+      target:
+        - -1.0562394483294213
+        - 45.447233326050906
+      hints:
+        '0': Par là.
+      enemies:
+        - type: hunter
+          coordinates:
+            - -1.0900981074935885
+            - 45.47806352457124
+        - type: eagle
+          coordinates:
+            - -1.0687136911795676
+            - 45.461122889599864
+        - type: snake
+          coordinates:
+            - -1.0612627118651972
+            - 45.47768482151858
+      helpers:
+        - - -1.0783845445498912
+          - 45.467660900766504
+        - - -1.0681742773524263
+          - 45.48407276379422
