--- a/test.yml
+++ b/test.yml
@@ -1,97 +1,89 @@
 player:
-  - 4.743066844611235
-  - 43.418291604166996
+  - 5.909994072500496
+  - 46.3995504071151
 target:
-  - 4.4290259009511885
-  - 43.45071602286123
-hints:
-  '0': Je suis à l'ouest de Marseille.
-  '5.69': Ah oui ! Entre Marseille et Nîmes !
-  '6.69': Ça me revient, aux alentours de Martigues.
-  '7.70': C'est ça, je suis dans la partie est du PNR de Camargue.
-  '8.70': Je suis vers Salin de Giraud.
-  '9.70': >-
-    Je suis à l'extrémité de la route sur l'embouchure du Grand Rhône. Clique
-    sur ma position pour continuer.
+  - 5.868459680125909
+  - 46.145652953648494
+hints: {}
 enemies:
-  - type: eagle
-    coordinates:
-      - 4.706147771370951
-      - 43.47123582602734
-  - type: snake
-    coordinates:
-      - 4.715144830348976
-      - 43.413706125519695
-  - type: eagle
-    coordinates:
-      - 4.669382309228723
-      - 43.402727800390494
-  - type: eagle
-    coordinates:
-      - 4.620788485396275
-      - 43.44788673532486
-  - type: snake
-    coordinates:
-      - 4.706767398381658
-      - 43.39401320162591
-  - type: eagle
-    coordinates:
-      - 4.644188420870762
-      - 43.486519836061404
-  - type: snake
-    coordinates:
-      - 4.599158900511668
-      - 43.40761071256463
-  - type: snake
-    coordinates:
-      - 4.737945451804535
-      - 43.38710513145713
-  - type: eagle
-    coordinates:
-      - 4.63747648817241
-      - 43.52354809975452
-  - type: snake
-    coordinates:
-      - 4.662520378517797
-      - 43.348256581461584
   - type: hunter
     coordinates:
-      - 4.713372296969396
-      - 43.35021811721788
-  - type: snake
-    coordinates:
-      - 4.439113292643583
-      - 43.46213632439901
+      - 5.865962689126519
+      - 46.22275159180546
   - type: eagle
     coordinates:
-      - 4.411894939856779
-      - 43.450694124772184
+      - 5.843338508000187
+      - 46.17530923266921
+  - type: snake
+    coordinates:
+      - 5.854488034144964
+      - 46.156206287897476
+  - type: snake
+    coordinates:
+      - 5.93956645775188
+      - 46.26094073075083
   - type: hunter
     coordinates:
-      - 4.677429253227189
-      - 43.44201111982531
+      - 5.819660320687831
+      - 46.297102582689206
   - type: hunter
     coordinates:
-      - 4.59264601379661
-      - 43.359974999914954
+      - 5.941811396269287
+      - 46.30403694891214
+  - type: eagle
+    coordinates:
+      - 5.8899499013560614
+      - 46.32561394286148
+  - type: snake
+    coordinates:
+      - 5.914217925321282
+      - 46.34456212441978
+  - type: eagle
+    coordinates:
+      - 5.963815815635229
+      - 46.36827886422836
+  - type: hunter
+    coordinates:
+      - 6.023087281683104
+      - 46.36421500383722
+  - type: hunter
+    coordinates:
+      - 5.864677634807066
+      - 46.3881677766322
+  - type: snake
+    coordinates:
+      - 5.889950007857465
+      - 46.20354457978539
+  - type: snake
+    coordinates:
+      - 5.871288676430936
+      - 46.1640789455607
+  - type: snake
+    coordinates:
+      - 5.856781609324173
+      - 46.298238657091815
+  - type: snake
+    coordinates:
+      - 5.869242561873477
+      - 46.26541592882012
 helpers:
-  - - 4.494438615541071
-    - 43.47357852690584
-  - - 4.463617819407261
-    - 43.46545495342366
-  - - 4.438700582171464
-    - 43.476135634051985
-  - - 4.425733750057873
-    - 43.45899442669938
-  - - 4.779393264322891
-    - 43.371482762812775
-  - - 4.710562388834035
-    - 43.37012787102793
-  - - 4.6534873010837146
-    - 43.37067182966072
-  - - 4.584320283355623
-    - 43.45499642875981
-  - - 4.654504444119709
-    - 43.42777666084689
-  - - 4.708729331795098
-    - 43.438235121187944
+  - - 5.8627731778054795
+    - 46.338665996237495
+  - - 5.908882403366221
+    - 46.36064621901548
+  - - 5.94358877347787
+    - 46.34934506801255
+  - - 5.951792689763209
+    - 46.2781734542117
+  - - 5.894153205563555
+    - 46.29531665021375
+  - - 5.825829112473713
+    - 46.23794347488817
+  - - 5.847408236985956
+    - 46.188608862645594
+  - - 5.881060079030107
+    - 46.1834348433147
+  - - 5.91937387928175
+    - 46.23743782243562
+  - - 5.978827952848633
+    - 46.32946440682531
