--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "current-device": "^0.10.2",
     "d3": "^7.9.0",
     "maplibre-gl": "^5.6.2",
-    "proj4": "^2.15.0"
+    "proj4": "^2.15.0",
+    "wellknown": "^0.5.0"
   },
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.13.3",
