fire sound effect in credits

--- a/server/credits.yml
+++ b/server/credits.yml
@@ -63,6 +63,9 @@
   - role: Serpent
     name: quicksounds.com
     link: https://quicksounds.com/sound/4386/
+  - role: Feu de camp
+    name: RonKoster2023
+    link: https://pixabay.com/users/ronkoster2023-25675699/
 ###############
 #### FONTS ####
 ###############
