added UI sound effects

--- a/server/credits.yml
+++ b/server/credits.yml
@@ -65,7 +65,10 @@
     link: https://quicksounds.com/sound/4386/
   - role: Feu de camp
     name: RonKoster2023
-    link: https://pixabay.com/users/ronkoster2023-25675699/
+    link: https://pixabay.com/sound-effects/fireplace-with-crackling-sounds-2-min-rk-178392/
+  - role: Clics boutons
+    name: floraphonic
+    link: https://pixabay.com/sound-effects/casual-click-pop-ui-7-262127/
 ###############
 #### FONTS ####
 ###############
