added a singing woodpigeon in the credits page

--- a/server/credits.yml
+++ b/server/credits.yml
@@ -69,6 +69,9 @@
   - role: Clics boutons
     name: floraphonic
     link: https://pixabay.com/sound-effects/casual-click-pop-ui-7-262127/
+  - role: Pigeon ramier
+    name: Grégoire Chauvot
+    link: https://xeno-canto.org/1032301
 ###############
 #### FONTS ####
 ###############
