optimized rabbit routing by precalculating vertexes

--- a/server/levels.yml
+++ b/server/levels.yml
@@ -530,7 +530,7 @@
         - 6.844110815720512
         - 48.40714593504839
       hints:
-        '0': Je suis aux vers Strasbourg.
+        '0': Je suis aux alentours de Strasbourg.
         '5.07': Entre Nancy et Mulhouse.
         '6.74': Ah oui, je suis vers St-Dié-des-Vosges.
         '7.74': Ah oui ! Je suis à l'ouest de St-Dié-des-Vosges.
