added a "about" page to explain the context

--- a/server/credits.yml
+++ b/server/credits.yml
@@ -48,6 +48,7 @@
   content:
   - role: Musique originale
     name: Justin Berli
+    link: https://justinberli.bandcamp.com/track/th-me-mapinou
   - role: Clics boutons
     name: floraphonic
     link: https://pixabay.com/sound-effects/casual-click-pop-ui-7-262127/
